# Iris-Recognition

./: .gitignore  CMakeLists.txt  LICENSE  README.md  circle.cpp  main.cpp  preprocessing.cpp  utility.cpp
Demo/: Enrollment.py  Identification.py  README.md  Verification.py  requirements.txt
Demo/Models/: FeatNetFE.py  VGGFE.py
Demo/Models/Pretrained/: featNetTriplet_100e_1e-4lr.pth
Demo/Segmentation/: Segmentation.py
Demo/Storage/: Test.csv
LBP/: CMakeLists.txt
LBP/src/: app.cpp  lbp.cpp  lbp.h
Notebooks/: Iris Feature Extraction.ipynb  README.md  iris-feature-extraction.ipynb
Recognizer/: Enrollment.py  Identification.py  Verification.py
Recognizer/Models/: FeatNetFE.py
Recognizer/Segmentation/: Segmentation.py
Report/: bibliography.bib  main.tex
SegmentationModule/: CMakeLists.txt  README.md
SegmentationModule/Scripts/: script.sh  segment_utiris.sh
SegmentationModule/Segmentator/: CMakeLists.txt
SegmentationModule/Segmentator/src/: ImagePreproc.cpp  ImagePreproc.h  Normalization.cpp  Normalization.h  Segmentation.h  Util.cpp  Util.h  app.cpp
SegmentationModule/Segmentator/src/Hough/: HoughSegmentator.cpp  HoughSegmentator.h
SegmentationModule/Segmentator/src/Isis/: IsisSegmentator.cpp  IsisSegmentator.h
Segmentator/: CMakeLists.txt
Segmentator/src/: ImagePreproc.cpp  ImagePreproc.h  Segmentation.h  Util.cpp  app.cpp
Segmentator/src/Hough/: HoughSegmentator.cpp  HoughSegmentator.h
Segmentator/src/Isis/: IsisSegmentator.cpp  IsisSegmentator.h
encoding/: iris_encoding.cpp
include/: circle.hpp  iris_encoding.hpp  isis_segmentation.hpp  preprocessing.hpp  settings.h  utility.hpp
iris/: circle.cpp  circle.hpp  main.cpp  preprocessing.cpp  preprocessing.hpp  settings.h  utility.cpp  utility.hpp
iris.xcodeproj/: project.pbxproj
iris.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
iris.xcodeproj/xcshareddata/xcschemes/: iris.xcscheme
iris/encoding/: iris_encoding.cpp  iris_encoding.hpp
iris/segmentation/: isis_segmentation.cpp  isis_segmentation.hpp
segmentation/: isis_segmentation.cpp
(+3 files in other folders)
